--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/puppetup/Employee-Tracker-CMS#readme",
   "dependencies": {
+    "asciiart-logo": "^0.2.6",
     "console.table": "^0.10.0",
     "express": "^4.18.1",
     "inquirer": "^6.5.2",
